# AccentPicker

./: .gitignore  CMakeLists.txt  README.md  createInstaller.sh
assets/: resources.qrc
debian/: accentpicker.desktop  changelog  control  files  install  links  postrm  rules
scripts/: createInstaller.sh
src/: accentmap.cpp  accentmap.h  accentmap1.cpp  accentmap1.h  accentpicker.cpp  accentpicker.h  appconfig.cpp  appconfig.h  keymonitor.cpp  keymonitor.h  main.cpp  mainwindow.cpp  mainwindow.h  sleeptimer.h  x11platformwindow.cpp  x11platformwindow.h
src/config/: appconfig.cpp  appconfig.h  configkeys.h
src/core/: accentmap.cpp  accentmap.h  keymonitor.cpp  keymonitor.h  singleinstance.cpp
src/gui/: accentpicker.cpp  accentpicker.h  charactersetdialog.cpp  charactersetdialog.h  mainwindow.cpp  mainwindow.h
src/platform/x11/: x11platformwindow.cpp
